# gbxcule

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl
.beads/.br_history/: issues.20260201_103945.jsonl
.githooks/: pre-commit
bench/: harness.py  tetris_bench.py
bench/analysis/: plot_scaling.py  summarize.py
bench/baselines/dreamer_v3/: bench_small.json  exit_oak_eval_small.json  exit_oak_small.json  standing_still_small.json
bench/roms/: build_micro_rom.py  suite.yaml
configs/: debug.yaml  default.yaml  m0_pokered_smoke.json
docs/: DGX_PUFFER_SETUP.md  DGX_SETUP.md  dreamer_v3_validation.md  pyboy_state_format.md  rl_m3.md  rl_observability.md  rl_stage1_report.md  tetris_parity_discrepancy.md
history/: a2c-training.md  a2c-wa.md  a2c-wb.md  a2c-wc.md  a2c-wd.md  a2c-we.md  a2c-wf.md  appo-harness-redux.md  async-ppo.md  dreamer-gotchas.md  dreamer-m0.md  dreamer-m1.md  dreamer-m2.md  dreamer-m3.md  dreamer-m4.md  dreamer-m5.md  dreamer-m6.md  dreamer-m7.md  dreamer-m8.md  dreamer-plan.md  epic1.md  epic2.md  epic345.md  epic6789.md  gameboy-emu.md  gameboy-milestone-b-plan.md  gameboy-milestone-c-plan.md  gameboy-milestone-d-plan.md  gameboy-milestone-e-plan.md  gameboy-milestone-e-spec.md  gameboy-milestone-f-plan.md  m0-epics.md  m0-plan.md  m1-plan.md  m2-architecture.md  m3-architecture.md  m3-workstreams.md  m4-architecture.md  m4-workstream-1-plan.md  m4-workstream-3-plan.md  (+12 more)
src/gbxcule/: __init__.py  __main__.py
src/gbxcule/backends/: __init__.py  common.py  pyboy_gym_env.py  pyboy_puffer_single.py  pyboy_puffer_vec.py  pyboy_single.py  pyboy_vec_mp.py  stub_bad.py  warp_vec.py
src/gbxcule/core/: __init__.py  abi.py  action_codec.py  action_schedule.py  cartridge.py  isa_sm83.py  obs.py  ppu_helpers.py  reset_cache.py  signatures.py  state_io.py
src/gbxcule/kernels/: __init__.py  cpu_step.py  cpu_step_builder.py  ppu_render_downsampled.py  ppu_step.py  reset_mask.py  reward.py  utils.py
src/gbxcule/rl/: __init__.py  a2c.py  async_ppo.py  async_ppo_engine.py  capture_goal_template.py  dual_lobe_model.py  eval.py  experiment.py  failfast.py  frame_stack_env.py  goal_match.py  goal_template.py  impala_model.py  metrics.py  models.py  nature_cnn.py  packed_metrics.py  packed_pixels.py  pokered_pixels_env.py  (+10 more)
states/: rl_m5_actions_pallet_house.jsonl  rl_stages.json  tetris_actions.jsonl  tetris_parity_mismatch.json  tetris_start.meta.json  tetris_start.state
states/rl_m5_goal_pallet_house/: goal_template.meta.json  goal_template.npy
states/rl_oak_parcel/: after_deliver.state  after_mart.state  start.state
states/rl_stage1_exit_oak/: README.md  goal_template.meta.json  goal_template.npy
states/rl_stage2_return_home/: README.md  goal_template.meta.json  goal_template.npy
states/rl_stage3_enter_house/: README.md  goal_template.meta.json  goal_template.npy
states/rl_stage4_at_snes/: README.md
states/rl_stage5_time_to_go/: README.md  goal_template.meta.json  goal_template.npy  start.state
tests/: __init__.py  conftest.py  test_action_codec.py  test_action_schedule.py  test_async_ppo_buffers.py  test_backend_compliance.py  test_backends_common.py  test_cartridge.py  test_cpu_step_builder.py  test_curiosity_reset.py  test_dma_oam_copy.py  test_docs.py  test_dreamer_v3_engine.py  test_dual_lobe_model.py  test_external_serial_rom.py  test_harness.py  test_imports.py  test_isa_coverage.py  test_joy_diverge_persist.py  test_m0_pixel_smoke.py  test_micro_roms.py  test_packed_model_and_minibatch.py  test_packed_pixels.py  test_pokered_parcel_detectors.py  test_pokered_ram_senses.py  test_ppo_parcel_smoke.py  test_ppu_bg_hash_vs_pyboy.py  test_ppu_downsampled_packed_pixels.py  test_ppu_downsampled_pixels.py  test_ppu_helpers.py  test_ppu_stat_irq.py  test_ppu_timing.py  test_pyboy_puffer_vec_backend.py  test_pyboy_single_backend.py  test_pyboy_vec_mp_backend.py  test_render_packed_to_torch.py  test_reset_cache.py  test_rl_a2c_smoke.py  test_rl_eval.py  test_rl_goal_match.py  (+21 more)
tests/fixtures/: train_log_example.jsonl
tests/rl/: test_async_ppo_cpu.py  test_async_ppo_engine.py  test_async_ppo_engine_packed2.py  test_experiment.py  test_failfast.py  test_no_host_staging.py  test_packed2_support.py  test_packed_metrics.py  test_pokered_packed_parcel_env.py  test_render_contract.py  test_schemas.py  test_timing.py  test_zero_copy_rollout.py
tests/rl_dreamer/: __init__.py  conftest.py  fixtures.py  test_behavior.py  test_config.py  test_continue_head.py  test_dists.py  test_fixtures.py  test_imagination.py  test_math.py  test_overfit_one_batch.py  test_pixel_encoder.py  test_player_actor_core.py  test_replay_cuda.py  test_replay_ring.py  test_return_ema.py  test_returns.py  test_reward_twohot.py  test_rng.py  test_rssm.py  test_schema.py  test_world_model_loss.py  test_world_model_shapes.py
tests/tools/: test_rl_bench_sweep.py  test_rl_gpu_bench_async.py
tools/: capture_goal_from_state.py  capture_goal_template_cpu.py  capture_tetris_state.py  check_existing_state.py  check_trace.py  derive_state_from_trace.py  dump_downsampled_pixels.py  dump_policy_mp4.py  eval_policy_cpu.py  final_warp_test.py  gen_trace.py  plot_train_log.py  pokered_pixel_smoke.py  profile_gpu_training.py  profile_harness_match.py  profile_no_sync.py  profile_training_loop.py  profile_training_simple.py  profile_with_model.py  profile_with_render.py  pyboy_play_state.py  pyboy_pokered_house_trace.py  pyboy_tetris_gameplay.py  random_explore_cpu.py  render_ppo_video.py  rl_bench_sweep_async_ppo.py  rl_dreamer_packed2_bench.py  rl_dreamer_regression.py  rl_dreamer_visualize.py  rl_env_bench.py  rl_eval.py  rl_gpu_bench.py  rl_gpu_bench_async.py  rl_gpu_bench_dreamer.py  rl_gpu_bench_replay_ingest.py  rl_m2_smoke.py  rl_m4_smoke.py  rl_m5_eval.py  rl_m5_train.py  rl_m5_train_a2c.py  (+20 more)
tools/dreamer_v3/: golden_bridge.py
typings/cv2/: __init__.pyi
typings/gymnasium/: __init__.pyi
typings/pufferlib/: __init__.pyi  emulation.pyi  vector.pyi
typings/pyboy/: __init__.pyi  utils.pyi
typings/warp/: __init__.pyi
(+50 files in other folders)
